--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ sqlalchemy~=1.4.7
 wtforms~=2.3.3
 flask~=1.1.2
 werkzeug~=1.0.1
-flask-jwt~=0.3.2
-flask_restful
-flask_login
+jwt~=1.2.0
+pyjwt~=1.4.2
+pymorphy2~=0.9.1
