--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,35 @@
-sqlalchemy~=1.4.7
-wtforms~=2.3.3
-flask~=1.1.2
-werkzeug~=1.0.1
-jwt~=1.2.0
-pyjwt~=1.4.2
-pymorphy2~=0.9.1
+aniso8601==9.0.1
+APScheduler==3.9.1
+certifi @ file:///croot/certifi_1665076670883/work/certifi
+cffi==1.15.1
+click==8.1.3
+cryptography==3.4.8
+DAWG-Python==0.7.2
+dnspython==2.2.1
+docopt==0.6.2
+email-validator==1.3.0
+Flask==1.1.2
+Flask-APScheduler==1.12.1
+Flask-Login==0.3.2
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.14.3
+greenlet==1.1.3.post0
+idna==3.4
+itsdangerous==1.1.0
+Jinja2==2.11.3
+jwt==1.2.0
+MarkupSafe==2.0.1
+pycparser==2.21
+pymorphy2==0.9.1
+pymorphy2-dicts-ru==2.4.417127.4579844
+python-dateutil==2.8.2
+pytz==2022.4
+pytz-deprecation-shim==0.1.0.post0
+six==1.16.0
+SQLAlchemy==1.4.41
+SQLAlchemy-serializer==1.3.1
+tzdata==2022.4
+tzlocal==4.2
+Werkzeug==1.0.1
+WTForms==3.0.1
